test/e2e/testdata/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: http_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                http_filters:
                  - name: envoy.filters.http.rate_limit_quota
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.rate_limit_quota.v3.RateLimitQuotaFilterConfig
                      rlqs_server:
                        envoy_grpc:
                          cluster_name: rlqs_cluster
                        timeout: 2s
                      domain: "e2e-test"
                      bucket_matchers:
                        on_no_match:
                          action:
                            name: catch_all
                            typed_config:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.rate_limit_quota.v3.RateLimitQuotaBucketSettings
                              bucket_id_builder:
                                name:
                                  string_value: "catch-all"
                              reporting_interval: 2s
                              no_assignment_behavior:
                                fallback_rate_limit:
                                  blanket_rule: ALLOW_ALL
                              expired_assignment_behavior:
                                fallback_rate_limit:
                                  blanket_rule: ALLOW_ALL
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "OK"

  clusters:
    - name: rlqs_cluster
      type: STRICT_DNS
      connect_timeout: 5s
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: rlqs_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: rlqs-server
                      port_value: 18081
